cmake_minimum_required(VERSION 3.25)
project(KMB_Pthreads C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(Mst_Node)
add_subdirectory(Matrix)
add_subdirectory(Edge)
add_subdirectory(Distance_Graph_Build)
add_subdirectory(Dijkstra_Shortest_Path)
add_subdirectory(Prim_MST)
add_subdirectory(Adjacency_List)
add_subdirectory(Path)
add_subdirectory(Graph)
add_subdirectory(Path_To_Source)
add_subdirectory(Utilities)
add_subdirectory(Steiner_Points)
add_subdirectory(Subgraph_Creation_Data)
add_subdirectory(src)
add_executable(main main.c)
target_link_libraries(main PUBLIC Src)